feat: add docker-compose

--- a/back/booking-hotel/docker-compose.yml
+++ b/back/booking-hotel/docker-compose.yml
@@ -2,10 +2,12 @@ version: "3.9"
 services:
   db:
     image: postgres:14
-    container_name: 'db-booking-hotel'
+    container_name: 'db-booking-hotel1'
     ports:
       - 5432:5432
     restart: always
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
+    volumes:
+      - ./src/main/resources/db.migration/V1__create_table_user_authentication.sql:/docker-entrypoint-initdb.d/V1__create_table_user_authentication.sql
