--- a/back/booking-hotel/src/main/resources/application.yml
+++ b/back/booking-hotel/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   r2dbc:
-    url: r2dbc:pool:postgresql://localhost:5432/postgres
+    url: r2dbc:pool:postgresql://${DB_HOST}:5432/postgres
     username: postgres
-    password: postgres
+    password: ${PASSWORD}
 
 jwt:
   secret: secreto
