--- a/back/booking-hotel/newrelic/newrelic.yml
+++ b/back/booking-hotel/newrelic/newrelic.yml
@@ -13,7 +13,7 @@ common: &default_settings
   # account. For example, if your license key is 12345 use this:
   # license_key: '12345'
   # The key binds your Agent's data to your account in the New Relic service.
-  license_key: <>
+  license_key: 4204828ef256f6c6a3d4caf0e4145aa224d1NRAL
 
   # Agent Enabled
   # Use this setting to disable the agent instead of removing it from the startup command.
