--- a/front/booking-hotel-front/package.json
+++ b/front/booking-hotel-front/package.json
@@ -9,11 +9,13 @@
     "axios": "^0.26.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.1.3",
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "reactstrap": "^9.0.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
